TestCgroupSubsystemController: rework use of Files.writeString